Securing Prometheus with Istio mTLS/sidecar-port-9080.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: httpbin-sidecar
spec:
  workloadSelector:
    labels:
      app: httpbin
  ingress:
  - port:
      number: 9080
      protocol: HTTP
      name: merged-prometheus
    defaultEndpoint: 0.0.0.0:15020
